--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "framer-motion": "^6.2.1",
+    "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "mdbreact": "^5.2.0",
     "pdfjs-dist": "^2.6.347",
